tests/valid/test05_flotantes.ml
// Test 05: Flotantes
pi = 3.14159;
radio = 5.0;
area = pi * radio * radio;
print(area);
