tests/errors/err05_caracter_ilegal.ml
// Error 05: Caracter ilegal
a = 5@3;
print(a);
